--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 html{
+    background-image:url(images/TheFade.jpg);
+    background-repeat: repeat-x;
+    background-size: 1000px;
     font-family: 'IBM Plex Serif', serif;
 }
 
@@ -42,7 +45,7 @@ a:link {
     color: red;
   }
 
-  
+
   a:visited {
     color: green;
   }
