--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html{
-    background-image:url(images/TheFade.jpg);
-    background-repeat: repeat-x;
-    background-size: 1000px;
+    background-image:url(images/linear-gradient.png);
+    background-repeat: repeat-y;
+    background-size: 2000px;
     font-family: 'IBM Plex Serif', serif;
+    
     color: #CFD;
 }
 
@@ -37,4 +38,17 @@ a:link {
 
   a:visited {
     color: green;
+  }
+
+  h1 {
+    font-size: 72px;
+    background: -webkit-linear-gradient(#121543, #ffc90e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  h3 {
+    background: -webkit-linear-gradient(#121543, #ffc90e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
