--- a/style.css
+++ b/style.css
@@ -52,3 +52,12 @@ a:link {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  .box{
+    margin: 2px;
+    padding: 5px;
+    border: 2px solid #000;
+    height: 25px;
+    width: 200px;
+    user-select: none;
+}
