--- a/style.css
+++ b/style.css
@@ -57,10 +57,14 @@ a:link {
     display: block;
     width: 50%;
     margin: auto;
+    margin-top: 15px;
+    border: 2px solid #ffc90e;
+    border-radius: 10px;
   }
 
   #ss_image {
-    border-radius: 20%;
+    border: 2px solid #ffc90e;
+    border-radius: 10%;
   }
 
   .spec_item {
@@ -70,7 +74,9 @@ a:link {
   .box{
     margin: 2px;
     padding: 5px;
-    border: 2px solid #000;
+    border: 2px solid #ffc90e;
+    border-radius: 10px;
+    padding: 15px;
     height: 65px;
     width: 400px;
     user-select: none;
